@@ -1,6 +1,6 @@
 # TaskFlow — JavaFX Task Management System
 
-## 📁 Project Structure
+##  Project Structure
 
 ```
 TaskManagerApp/
@@ -29,46 +29,4 @@ TaskManagerApp/
 │       ├── styles/
 │          └── style.css           ← Full dark-glass UI theme + background image
 ```
-
----
-
-## 🚀 Features
-
-| Feature | Description |
-|---|---|
-| 📅 Today View | Shows today's tasks + overdue items highlighted in red |
-| 📋 All Tasks | Complete list with search bar, category & status filters |
-| ➕ Add Task | Form with title, description, due date, reminder time, priority, category |
-| ⏰ Reminders | Lists tasks with reminder times grouped (today / upcoming) |
-| ⏰ Auto Reminders | Background service shows popup alerts when reminder time arrives |
-| ✅ Status Toggle | Mark tasks as PENDING / IN_PROGRESS / DONE inline |
-| 🗑 Delete Tasks | Delete with confirmation dialog |
-| 🎨 Background Image | Custom background image via CSS (`-fx-background-image`) |
-
----
-
-## 🛠 How to Run
-
-### Prerequisites
-- Java 17+ (with JavaFX bundled or separately)
-- JavaFX SDK (if using separate JDK)
-
-### Option A — IntelliJ IDEA
-1. Create a new JavaFX project
-2. Copy all `.java` files into their respective packages
-3. Copy `style.css` to `src/resources/styles/`
-4. Add your background image to `src/resources/images/background.jpg`
-5. Add VM options: `--module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml`
-6. Run `Main.java`
-
-### Option B — Command Line (with JavaFX on classpath)
-```bash
-javac --module-path $JAVAFX_HOME/lib --add-modules javafx.controls \
-      -d out src/**/*.java
-
-java --module-path $JAVAFX_HOME/lib --add-modules javafx.controls \
-     -cp out main.Main
-```
-
----
 
